Fixed jumpy lines

--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -1,3 +1,3 @@
-h3
-    font-family: 'Brush Script MT', cursive
+h1
     font-size: 3rem
+    font-family: 'Brush Script MT', cursive
